--- a/PacmanForms/PacmanForms/Properties/Resources.resx
+++ b/PacmanForms/PacmanForms/Properties/Resources.resx
@@ -118,10 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="Pacman_Closed" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Pacman_Closed.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="New_Piskel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\New Piskel.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Pacman_pic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Pacman_pic.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Pacman_pic2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Pacman_pic2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sprite_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sprite_0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sprite_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sprite_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sprite_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sprite_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sprite_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sprite_3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
